# filemanager-httpd

./: .gitignore  Makefile  Makefile.am  PKGBUILD  README.md  autogen.sh  configure.ac  filemanager-httpd.conf  filemanager-httpd.socket  filemanager-httpd@.service  filemanager_cgi.c  welcome.html
conf.d/: Makefile.am  README  default.conf
debian/: Makefile.am  changelog  control  copyright  filemanager-httpd.default  filemanager-httpd.init  filemanager-httpd.service  rules
src/: Makefile  Makefile.am  auth.c  auth.h  cgiexecutor.c  cgiexecutor.h  cgirespheader.c  cgirespheader.h  cmdline.c  cmdline.h  configfile.c  configfile.h  contentpart.c  contentpart.h  contenttype.c  contenttype.h  datachunk.c  datachunk.h  dataheader.c  dataheader.h  dataprocessingresult.c  dataprocessingresult.h  datareadyselector.c  datareadyselector.h  datasource.c  datasource.h  filemanager.c  filemanager.h  fmconfig.c  fmconfig.h  fmlog.c  fmlog.h  folder.c  folder.h  main.c  md5calc.c  md5calc.h  membuf.c  membuf.h  multipartdata.c  (+15 more)
