sbin_PROGRAMS = filemanager-httpd

filemanager_httpd_SOURCES = datachunk.c membuf.c folder.c requestbuf.c \
							respbuf.c fmconfig.c filemanager.c cmdline.c \
							md5calc.c auth.c fmlog.c datasource.c \
							reqhandler.c main.c \
							fmconfig.h datachunk.h filemanager.h membuf.h \
							requestbuf.h respbuf.h folder.h cmdline.h \
							md5calc.h auth.h fmlog.h datasource.h \
							reqhandler.h

filemanager_httpd_CFLAGS = -Wall
